<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/menu_header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.spiritsthief.views.DrawerItem
                android:id="@+id/wish_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/wish_list"
                app:single_line="true"
                app:icon="@drawable/ic_favorite_added"
                app:icon_tint="@color/red"/>

            <com.spiritsthief.views.DrawerItem
                android:id="@+id/currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/currency"
                app:single_line="true"/>

            <com.spiritsthief.views.DrawerItem
                android:id="@+id/delivery_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/delivery_country"
                app:icon="@drawable/ic_delivery"/>

            <com.spiritsthief.views.DrawerItem
                android:id="@+id/business_owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/busness_owners"
                app:data="@string/businesS_owners_subtitle"
                app:icon="@drawable/ic_store"/>

            <com.spiritsthief.views.DrawerItem
                android:id="@+id/contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/contact_us"
                app:icon="@drawable/ic_contact_us"
                app:single_line="true"/>

            <com.spiritsthief.views.DrawerItem
                android:id="@+id/about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/about"
                app:icon="@drawable/ic_about_us_24dp"
                app:single_line="true"/>

            <com.spiritsthief.views.DrawerItem
                android:id="@+id/stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/statistics"
                app:icon="@drawable/ic_stats_icon_24dp"
                app:single_line="true"/>

            <com.spiritsthief.views.DrawerItem
                android:id="@+id/shop_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/stores_statistics"
                app:icon="@drawable/ic_stats_icon_24dp"
                app:single_line="true"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>