<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/nav_drawer_width"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/done"
            android:layout_toRightOf="@id/back"
            android:layout_weight="1"
            android:elevation="6dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/sort"
            android:textColor="@color/dark_gray"
            android:textSize="18sp" />

        <!--<TextView-->
            <!--android:id="@+id/done"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_gravity="right"-->
            <!--android:background="?attr/selectableItemBackgroundBorderless"-->
            <!--android:clickable="true"-->
            <!--android:elevation="6dp"-->
            <!--android:fontFamily="@font/montserrat"-->
            <!--android:gravity="center_vertical"-->
            <!--android:paddingLeft="16dp"-->
            <!--android:paddingRight="16dp"-->
            <!--android:text="@string/done"-->
            <!--android:textColor="@color/colorPrimary"-->
            <!--android:textSize="18sp" />-->
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rb_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header">

        <RadioButton
            android:id="@+id/name_asc"
            style="@style/FilterTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:button="@drawable/custom_radio_button_drawable"
            android:buttonTint="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="@string/sort_name_ascending" />

        <RadioButton
            android:id="@+id/name_desc"
            style="@style/FilterTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:button="@drawable/custom_radio_button_drawable"
            android:buttonTint="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="@string/sort_name_descending" />

        <RadioButton
            android:id="@+id/price_asc"
            style="@style/FilterTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:button="@drawable/custom_radio_button_drawable"
            android:buttonTint="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="@string/sort_average_price_ascending" />

        <RadioButton
            android:id="@+id/price_desc"
            style="@style/FilterTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:button="@drawable/custom_radio_button_drawable"
            android:buttonTint="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="@string/sort_average_price_descending" />

        <RadioButton
            android:id="@+id/age_asc"
            style="@style/FilterTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:button="@drawable/custom_radio_button_drawable"
            android:buttonTint="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="@string/age_ascending" />

        <RadioButton
            android:id="@+id/age_desc"
            style="@style/FilterTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:button="@drawable/custom_radio_button_drawable"
            android:buttonTint="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="@string/age_descending" />

    </RadioGroup>

</RelativeLayout>